# PyEngine

./: .gitignore  LAUNCHER_GUIDE.md  Local_Multiplayer_Game.py  README.md  audio_demo_main.py  collider_demo_main.py  day_night_cycle_demo.py  directional_light_demo_main.py  launcher.py  light_demo_main.py  liquid_demo_main.py  main.py  network_client.py  network_server.py  puzlegame.py  pyproject.toml  sprite_animation_demo_main.py  state_timer_demo_main.py  ui_demo.py  water_particle_demo_main.py
.claude/: settings.local.json
docs/: CRIANDO_JOGOS_PT.md  THREADING.md  documentacao_tecnica.md  guia_completo.md  guia_de_uso_pyengine.md  guia_interatividade_avancado.md  guia_introducao.md  guia_melhores_praticas_conclusao.md  guia_primeiros_passos.md
engine/: __init__.py
engine/core/: advanced_camera.py  audio_manager.py  camera.py  component.py  entity.py  input.py  interface.py  pathfinding.py  sprite.py  (+4 more)
examples/: audio_demo_main.py  collider_demo_main.py  day_night_cycle_demo.py  directional_light_demo_main.py  light_demo_main.py  main.py  simple_threading_example.py  sprite_animation_demo_main.py  template_with_threading.py  ui_demo.py
scenes/: __init__.py  audio_demo_scene.py  directional_light_demo.py  game_scene.py  loading_scene.py  menu_scene.py  sprite_animation_demo.py  state_timer_demo_scene.py  ui_demo_scene.py  water_particle_scene.py
tests/: __init__.py  test_base_scene.py  test_components.py  test_engine_core.py  test_html_view.py  test_html_view_example.py  test_multiplayer.py  test_render_system.py  test_resource_loader.py  test_threading.py
(+146 files in other folders)
